--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # Variables that start with NUXT_ENV_ will be statically embedded into the $nuxt.context.env.
 # For development
 DEVELOPMENT_PREFIX=
-DEVELOPMENT_BACKEND_URL=http://127.0.0.1:3000/api
+DEVELOPMENT_BACKEND_URL=/api
 DEVELOPMENT_BACKEND_PROXY_TARGET_URL=http://dev.e-formula.com/api/v01
 # For production
 PRODUCTION_PREFIX=/nuxt_template
