--- a/.vscode/launch.json.template
+++ b/.vscode/launch.json.template
@@ -4,7 +4,8 @@
       "type": "pwa-chrome",
       "request": "launch",
       "name": "nuxtjs: chrome",
-      "runtimeExecutable": "D:/yichengchen/ungoogled-chromium/chrome.exe",
+      "runtimeExecutable": "D:/yichengchen/ungoogled-chromium/chrome.exe",  // windows
+      "runtimeExecutable": "/Applications/Chromium.app/Contents/MacOS/Chromium",  // macos
       "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}",
       "preLaunchTask": "nuxtjs: start"
