--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,10 @@
 # Variables that start with NUXT_ENV_ will be statically embedded into the $nuxt.context.env.
 # For development
+DEVELOPMENT_HOST=http://localhost:3000
 DEVELOPMENT_PREFIX=
 DEVELOPMENT_BACKEND_URL=/api
-DEVELOPMENT_BACKEND_PROXY_TARGET_URL=http://dev.e-formula.com/api/v01
+DEVELOPMENT_BACKEND_PROXY_TARGET_URL=http://localhost:8989/flask_template/api/v01
 # For production
+PRODUCTION_HOST=https://bclab.ai
 PRODUCTION_PREFIX=/nuxt_template
-PRODUCTION_BACKEND_URL=http://dev.e-formula.com/api/v01
+PRODUCTION_BACKEND_URL=https://bclab.ai/flask_template/api/v01
