--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@line/liff": "^2.8.1",
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.14.6",
+    "nuxt": "^2.15.4",
     "nuxt-i18n": "^6.15.4"
   },
   "devDependencies": {
