--- a/.config.js.template
+++ b/.config.js.template
@@ -10,6 +10,10 @@ const config = {
     prefix: '/nuxt_template',
     backendUrl: 'https://dev.bclab.ai/flask_template/api/v01',
   },
+  // for liff
+  liff: {
+    id: '[liff id]',
+  },
 };
 
 export default config;
