--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# cSpell: ignore dotenv, eslintcache, jscoverage, jspm, mobi, pids, vuepress, wscript
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
 # Logs
