--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
+# cSpell: ignore dotenv, eslintcache, jscoverage, jspm, mobi, pids, vuepress, wscript
 ###
 # Place your Prettier ignore content here
 
