--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
+    "lint:fix": "prettier --write --list-different . && yarn lint:js --fix",
     "prepare": "husky install",
     "test": "jest"
   },
@@ -40,11 +40,16 @@
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
+    "eslint-plugin-vuetify": "^1.1.0",
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "vue-jest": "^3.0.4"
+  },
+  "engines": {
+    "node": "^18.0.0",
+    "yarn": "^1.22.0"
   }
 }
