--- a/.config.js.template
+++ b/.config.js.template
@@ -12,12 +12,25 @@ const apiGroups = {
 // const apis = apiGroups.prod;
 const apis = apiGroups.dev;
 
-// local
-apis.mainUrl = 'http://localhost:3000/_fake_apis/main';
+const fakeApisMiddleware = [];
+
+// fake APIs
+fakeApisMiddleware.push({
+  path: '/_fake-apis/main',
+  handler: '~/server-middleware/fake-apis/main.js',
+});
+apis.mainUrl = 'http://localhost:3000/_fake-apis/main';
 
 const config = {
   apis,
+  auths: {
+    local: {
+      maxAgeAccessToken: 8 * 60 * 60 * 1000, // 8 hours
+      maxAgeRefreshToken: 30 * 24 * 60 * 60 * 1000, // 30 days
+    },
+  },
   defaultLocale: locales.zhTw.code,
+  fakeApisMiddleware,
   routerBase: '',
 };
 
