--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
+  "cSpell.words": ["tiptap"],
   "i18n-ally.displayLanguage": "zh-TW",
   "i18n-ally.keystyle": "flat",
   "i18n-ally.localesPaths": "locales",
   "i18n-ally.sourceLanguage": "zh-TW",
   "path-intellisense.mappings": {
-    "~": "${workspaceFolder}",
-    "@": "${workspaceFolder}"
+    "@": "${workspaceFolder}",
+    "~": "${workspaceFolder}"
   }
 }
