--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.3.1",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/vue-2": "^2.11.5",
     "core-js": "^3.25.3",
     "dayjs": "^1.11.13",
     "nuxt": "^2.15.8",
