--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@tiptap/vue-2": "^2.11.5",
+    "async-lock": "^1.4.1",
     "core-js": "^3.25.3",
     "dayjs": "^1.11.13",
     "nuxt": "^2.15.8",
